--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@prisma/client": "^6.5.0",
     "antd": "^5.24.3",
     "bcryptjs": "^3.0.2",
     "formik": "^2.4.6",
+    "jodit": "^4.5.17",
+    "jodit-react": "^5.2.15",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.4.0",
     "sweetalert2": "^11.17.2",
     "sweetalert2-react-content": "^5.1.0",
     "yup": "^1.6.1"
